--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,44 +1,112 @@
+acres==0.5.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
+attrs==25.4.0
 certifi==2025.11.12
 charset-normalizer==3.4.4
-fastapi==0.109.0
+ci-info==0.3.0
+click==8.3.1
+colorama==0.4.6
+configobj==5.0.9
+configparser==7.2.0
+dataclasses-json==0.6.7
+etelemetry==0.3.1
+faiss-cpu==1.13.1
+fastapi==0.124.4
+filelock==3.20.0
+fitz==0.0.1.dev2
+frozenlist==1.8.0
+fsspec==2025.12.0
+greenlet==3.3.0
 h11==0.16.0
 httpcore==1.0.9
+httplib2==0.31.0
 httpx==0.28.1
+httpx-sse==0.4.3
 idna==3.11
+Jinja2==3.1.6
 jsonpatch==1.33
 jsonpointer==3.0.0
 langchain==1.1.3
+langchain-classic==1.0.0
+langchain-community==0.4.1
 langchain-core==1.2.0
-langchain-ollama==0.1.0
+langchain-ollama==1.0.1
+langchain-text-splitters==1.0.0
 langgraph==1.0.5
 langgraph-checkpoint==3.0.1
 langgraph-prebuilt==1.0.5
 langgraph-sdk==0.3.0
 langsmith==0.4.59
-numpy==1.24.3
-openai-whisper==20231117
+llvmlite==0.46.0
+looseversion==1.3.0
+lxml==6.0.2
+MarkupSafe==3.0.3
+marshmallow==3.26.1
+more-itertools==10.8.0
+mpmath==1.3.0
+multidict==6.7.0
+mypy_extensions==1.1.0
+networkx==3.6.1
+nibabel==5.3.3
+nipype==1.10.0
+numba==0.63.1
+numpy==2.3.5
+ollama==0.6.1
+openai-whisper==20250625
 orjson==3.11.5
 ormsgpack==1.12.0
 packaging==25.0
-Pillow==10.2.0
+pandas==2.3.3
+pathlib==1.0.1
+pillow==12.0.0
+propcache==0.4.1
+prov==2.1.1
+puremagic==1.30
 pydantic==2.12.5
-pydantic-settings==2.1.0
+pydantic-settings==2.12.0
 pydantic_core==2.41.5
-PyMuPDF==1.23.8
-python-docx==1.1.0
-python-pptx==0.6.23
-pytesseract==0.3.10
+pydot==4.0.1
+PyMuPDF==1.26.7
+pyparsing==3.2.5
+pytesseract==0.3.13
+python-dateutil==2.9.0.post0
+python-docx==1.2.0
+python-dotenv==1.2.1
+python-multipart==0.0.20
+python-pptx==1.0.2
+pytz==2025.2
+pyxnat==1.6.4
 PyYAML==6.0.3
+rdflib==7.5.0
+regex==2025.11.3
 requests==2.32.5
 requests-toolbelt==1.0.0
+scipy==1.16.3
+setuptools==80.9.0
+simplejson==3.20.2
+six==1.17.0
+SQLAlchemy==2.0.45
+starlette==0.50.0
+sympy==1.14.0
 tenacity==9.1.2
+tiktoken==0.12.0
+torch==2.9.1
+tqdm==4.67.1
+traits==7.0.2
+typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.3
 urllib3==2.6.2
 uuid_utils==0.12.0
-uvicorn==0.27.0
+uvicorn==0.38.0
+xlsxwriter==3.2.9
 xxhash==3.6.0
-yt-dlp==2023.12.30
+yarl==1.22.0
+yt-dlp==2025.12.8
 zstandard==0.25.0
