Refactor Docker, nginx, and frontend for improved proxying
got error with using the fitz library and changed the ollama model to a smaller one

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,14 @@
-# Stage 1: Build stage
-FROM python:3.11-slim AS builder
+FROM python:3.11-slim
 
-# Set working directory
 WORKDIR /app
 
-# Install system dependencies
+# System deps
 RUN apt-get update && apt-get install -y --no-install-recommends \
+    libgomp1 \
+    tesseract-ocr \
+    ffmpeg \
+    curl \
+    sqlite3 \
     build-essential \
     git \
     && rm -rf /var/lib/apt/lists/*
@@ -13,39 +16,22 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 # Copy requirements
 COPY requirements.txt .
 
-# Install Python dependencies
-RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt
+# KILL FITZ
+RUN pip install --upgrade pip && \
+    pip uninstall -y fitz || true && \
+    rm -rf /usr/local/lib/python3.11/site-packages/fitz && \
+    pip install --no-cache-dir PyMuPDF && \
+    pip install --no-cache-dir -r requirements.txt && \
+    python - <<EOF
+import fitz
+print("FINAL USING:", fitz.__file__)
+EOF
 
-# Stage 2: Runtime stage
-FROM python:3.11-slim
-
-# Set working directory
-WORKDIR /app
-
-# Install runtime dependencies only
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    libgomp1 \
-    tesseract-ocr \
-    ffmpeg \
-    && rm -rf /var/lib/apt/lists/*
-
-# Copy Python packages from builder
-COPY --from=builder /usr/local/lib/python3.11/site-packages /usr/local/lib/python3.11/site-packages
-COPY --from=builder /usr/local/bin /usr/local/bin
-
-# Copy application code
+# Copy app code
 COPY . .
 
-# Create data directories
 RUN mkdir -p data/vectors data/history
 
-# Expose port
 EXPOSE 8000
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-    CMD python -c "import requests; requests.get('http://localhost:8000/docs', timeout=5)" || exit 1
-
-# Run application
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
