--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   ollama:
@@ -13,11 +12,11 @@ services:
     networks:
       - studyrag-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:11434/api/tags"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 60s
+      test: ["CMD", "ollama", "list"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 30s
 
   studyrag-backend:
     image: zorocancode/studyrag-backend:latest
@@ -26,7 +25,7 @@ services:
       - "8000:8000"
     environment:
       - OLLAMA_BASE_URL=http://ollama:11434
-      - OLLAMA_MODEL=llama3
+      - OLLAMA_MODEL=llama3.2:1b
       - DEBUG=False
       - WHISPER_DEVICE=cpu  # Change to cuda if GPU available
     depends_on:
